--- a/Calendar/Events-Categories.xaml
+++ b/Calendar/Events-Categories.xaml
@@ -24,30 +24,29 @@
 
             <StackPanel Grid.Column="0" Margin="5">
                 <Label Content="Event Details"/>
-                <TextBox AcceptsReturn="True" Height="100" VerticalScrollBarVisibility="Auto" Foreground="Gray" Text="Enter event details here..."/>
-                <Label Content="Date/Time"/>
+                <TextBox x:Name="EventDetailsTextBox" AcceptsReturn="True" Height="100" VerticalScrollBarVisibility="Auto" Foreground="Gray" Text="Enter event details here..."/>
+                <Label Content="Date"/>
+                <DatePicker x:Name="EventDatePicker" Margin="0,2"/>
+                <Label Content="Time"/>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
-                    <ComboBox Width="Auto" Margin="2" ToolTip="Month"/>
-                    <ComboBox Width="Auto" Margin="2" ToolTip="Day"/>
-                    <TextBox Width="60" Margin="2" Foreground="Gray" Text="Year"/>
-                    <ComboBox Width="Auto" Margin="2" ToolTip="Hour"/>
-                    <ComboBox Width="Auto" Margin="2" ToolTip="Minute"/>
-                    <ComboBox Width="Auto" Margin="2" ToolTip="AM/PM"/>
+                    <ComboBox x:Name="HourComboBox" Width="Auto" Margin="2" ToolTip="Hour"/>
+                    <ComboBox x:Name="MinuteComboBox" Width="Auto" Margin="2" ToolTip="Minute"/>
+                    <ComboBox x:Name="AmPmComboBox" Width="Auto" Margin="2" ToolTip="AM/PM"/>
                 </StackPanel>
             </StackPanel>
 
             <StackPanel Grid.Column="1" Margin="5">
                 <Label Content="Duration (Minutes)"/>
-                <TextBox Foreground="Gray" Text="Duration in minutes"/>
+                <TextBox x:Name="DurationTextBox" Foreground="Gray" Text="Duration in minutes"/>
                 <Label Content="Category"/>
-                <ComboBox ToolTip="Event category">
+                <ComboBox x:Name="CategoryComboBox" ToolTip="Event category">
                 </ComboBox>
             </StackPanel>
         </Grid>
 
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-            <Button Content="Add" Margin="10,0" Width="100"/>
-            <Button Content="Cancel" Width="100"/>
+            <Button Content="Add" Margin="10,0" Width="100" Click="AddButton_Click"/>
+            <Button Content="Cancel" Width="100" Click="CancelButton_Click"/>
         </StackPanel>
 
         <Button Grid.Row="3" Content="Manage Categories" HorizontalAlignment="Center" Margin="10,5" ToolTip="Open category management"/>
