finished categories i think

--- a/Calendar/Categories.xaml
+++ b/Calendar/Categories.xaml
@@ -13,7 +13,7 @@
             <TextBox x:Name="Description" AcceptsReturn="True" Height="30" Margin="5,0,5,5" VerticalScrollBarVisibility="Auto" Foreground="Gray"/>
             <Label Content="Category Type"/>
             <ComboBox x:Name="Type" Margin="5,0,5,5"></ComboBox>
-            <Button HorizontalAlignment="Left" Margin="90,10,10,10" Width="70" Height="30">Events</Button>
+            <Button HorizontalAlignment="Left" Margin="90,10,10,10" Width="70" Height="30" Click="Go_To_Events">Events</Button>
             <Button HorizontalAlignment="Right" Width="70" Height="30" Margin="-20,-60,90,-10" Click="Add_Category">Add</Button>
         </StackPanel>
         <Button Content="X" Click="ExitButton_Click" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10"/>
