--- a/Calendar/Events-Categories.xaml
+++ b/Calendar/Events-Categories.xaml
@@ -52,6 +52,7 @@
 
         <Button Grid.Row="3" Content="Manage Categories" HorizontalAlignment="Center" Margin="10,5" ToolTip="Open category management" Click="Categories_Button"/>
         <Button Content="X" Click="ExitButton_Click" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10"/>
+        <TextBlock x:Name="DisplayDatabase" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="-10,10,10,-5">hi</TextBlock>
     </Grid>
 
 
