removed unnessecary text in event, placeholder text does not work

--- a/Calendar/Events-Categories.xaml
+++ b/Calendar/Events-Categories.xaml
@@ -24,7 +24,7 @@
 
             <StackPanel Grid.Column="0" Margin="5">
                 <Label Content="Event Details"/>
-                <TextBox x:Name="EventDetailsTextBox" AcceptsReturn="True" Height="100" VerticalScrollBarVisibility="Auto" Foreground="Gray" Text="Enter event details here..."/>
+                <TextBox x:Name="EventDetailsTextBox" AcceptsReturn="True" Height="100" VerticalScrollBarVisibility="Auto" Foreground="Gray"/>
                 <Label Content="Start Date"/>
                 <DatePicker x:Name="EventDatePicker" Margin="0,2"/>
                 <Label Content="Start Time"/>
@@ -38,7 +38,7 @@
 
             <StackPanel Grid.Column="1" Margin="5">
                 <Label Content="Duration (Minutes)"/>
-                <TextBox x:Name="DurationTextBox" Foreground="Gray" Text="Duration in minutes"/>
+                <TextBox x:Name="DurationTextBox" Foreground="Gray"/>
                 <Label Content="Category"/>
                 <ComboBox x:Name="CategoryComboBox" ToolTip="Event category">
                 </ComboBox>
