Added Methods that handle theme changing between and within windows.

--- a/Calendar/Events-Categories.xaml
+++ b/Calendar/Events-Categories.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:Calendar"
         mc:Ignorable="d"
         Title="Events_Categories" Height="475" Width="550">
-    <Grid Margin="20">
+    <Grid x:Name="grid">
+
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -14,43 +15,49 @@
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Add Event" FontWeight="SemiBold" FontSize="20" Margin="0,5"/>
+        <StackPanel Margin="20">
 
-        <Grid Grid.Row="1" Margin="5,10">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
+            <TextBlock Text="Add Event" FontWeight="SemiBold" FontSize="20" Margin="0,5"/>
 
-            <StackPanel Grid.Column="0" Margin="5">
-                <Label Content="Event Details"/>
-                <TextBox x:Name="EventDetailsTextBox" AcceptsReturn="True" Height="100" VerticalScrollBarVisibility="Auto" Foreground="Gray" Text="Enter event details here..."/>
-                <Label Content="Date"/>
-                <DatePicker x:Name="EventDatePicker" Margin="0,2"/>
-                <Label Content="Time"/>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
-                    <ComboBox x:Name="HourComboBox" Width="Auto" Margin="2" ToolTip="Hour"/>
-                    <ComboBox x:Name="MinuteComboBox" Width="Auto" Margin="2" ToolTip="Minute"/>
-                    <ComboBox x:Name="SecondComboBox" Width="Auto" Margin="2" ToolTip="Second"/>
-                    <ComboBox x:Name="AmPmComboBox" Width="Auto" Margin="2" ToolTip="AM/PM"/>
+            <Grid Grid.Row="1" Margin="5,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="0" Margin="5">
+                    <Label Content="Event Details"/>
+                    <TextBox x:Name="EventDetailsTextBox" AcceptsReturn="True" Height="100" VerticalScrollBarVisibility="Auto" Foreground="Gray" Text="Enter event details here..."/>
+                    <Label Content="Date"/>
+                    <DatePicker x:Name="EventDatePicker" Margin="0,2"/>
+                    <Label Content="Time"/>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
+                        <ComboBox x:Name="HourComboBox" Width="Auto" Margin="2" ToolTip="Hour"/>
+                        <ComboBox x:Name="MinuteComboBox" Width="Auto" Margin="2" ToolTip="Minute"/>
+                        <ComboBox x:Name="SecondComboBox" Width="Auto" Margin="2" ToolTip="Second"/>
+                        <ComboBox x:Name="AmPmComboBox" Width="Auto" Margin="2" ToolTip="AM/PM"/>
+                    </StackPanel>
                 </StackPanel>
+
+                <StackPanel Grid.Column="1" Margin="5">
+                    <Label Content="Duration (Minutes)"/>
+                    <TextBox x:Name="DurationTextBox" Foreground="Gray" Text="Duration in minutes"/>
+                    <Label Content="Category"/>
+                    <ComboBox x:Name="CategoryComboBox" ToolTip="Event category">
+                    </ComboBox>
+                </StackPanel>
+            </Grid>
+
+            <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
+                <Button Content="Add" Margin="10,0" Width="100" Click="AddButton_Click"/>
+                <Button Content="Cancel" Width="100" Click="CancelButton_Click"/>
             </StackPanel>
 
-            <StackPanel Grid.Column="1" Margin="5">
-                <Label Content="Duration (Minutes)"/>
-                <TextBox x:Name="DurationTextBox" Foreground="Gray" Text="Duration in minutes"/>
-                <Label Content="Category"/>
-                <ComboBox x:Name="CategoryComboBox" ToolTip="Event category">
-                </ComboBox>
+            <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
+                <Button Content="Toggle Theme" Margin="10,0" Width="120" Click="ToggleThemeButton_Click" />
+                <Button Content="Manage Categories" Width="120" Click="Categories_Button"/>
             </StackPanel>
-        </Grid>
-
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-            <Button Content="Add" Margin="10,0" Width="100" Click="AddButton_Click"/>
-            <Button Content="Cancel" Width="100" Click="CancelButton_Click"/>
         </StackPanel>
-
-        <Button Grid.Row="3" Content="Manage Categories" HorizontalAlignment="Center" Margin="10,5" ToolTip="Open category management" Click="Categories_Button"/>
     </Grid>
 
 
