--- a/Calendar/MainWindow.xaml
+++ b/Calendar/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Calendar"
         mc:Ignorable="d"
-        Title="Choose Calendar" Height="270" Width="325">
-    <Grid>
+        Title="Choose Calendar" Height="300" Width="325">
+    <Grid x:Name="grid">
         <StackPanel Margin="20">
             <TextBlock FontSize="15" FontWeight="Bold" Margin="67, 2, 2, 4">CALENDAR SET UP</TextBlock>
             <TextBlock Text="Calendar File Name:"/>
@@ -17,8 +17,16 @@
 
             <Button Content="Open File Explorer" Click="OpenFileExplorer_Click" Margin="0,10"/>
             <Button Click="Button_Click">Done</Button>
+
+            <CheckBox Margin="0,10" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked">Toggle Dark Mode</CheckBox>
+
         </StackPanel>
 
         <Button Content="X" Click="ExitButton_Click" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10"/>
+        
     </Grid>
+    
 </Window>
+
+
+
