--- a/Calendar/Events-Categories.xaml
+++ b/Calendar/Events-Categories.xaml
@@ -5,19 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Calendar"
         mc:Ignorable="d"
-        Title="Events_Categories" Height="475" Width="550">
+        Title="Events_Categories" Height="500" Width="550">
     <Grid x:Name="grid">
+        <Grid Margin="20">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="20"/>
+            </Grid.RowDefinitions>
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="60"/>
-        </Grid.RowDefinitions>
-
-        <StackPanel Margin="20">
-
-            <TextBlock Text="Add Event" FontWeight="SemiBold" FontSize="20" Margin="0,5"/>
+            <TextBlock Text="Add Event" FontWeight="SemiBold" FontSize="20" Margin="0,5" Grid.Row="0"/>
 
             <Grid Grid.Row="1" Margin="5,10">
                 <Grid.ColumnDefinitions>
@@ -43,23 +41,30 @@
                     <Label Content="Duration (Minutes)"/>
                     <TextBox x:Name="DurationTextBox" Foreground="Gray" Text="Duration in minutes"/>
                     <Label Content="Category"/>
-                    <ComboBox x:Name="CategoryComboBox" ToolTip="Event category">
-                    </ComboBox>
+                    <ComboBox x:Name="CategoryComboBox" ToolTip="Event category"/>
                 </StackPanel>
             </Grid>
 
-            <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-                <Button Content="Add" Margin="10,0" Width="100" Click="AddButton_Click"/>
-                <Button Content="Cancel" Width="100" Click="CancelButton_Click"/>
-            </StackPanel>
+            <Grid Grid.Row="2" Margin="10" HorizontalAlignment="Center">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="10"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="5"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
 
-            <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-                <Button Content="Toggle Theme" Margin="10,0" Width="120" Click="ToggleThemeButton_Click" />
-                <Button Content="Manage Categories" Width="120" Click="Categories_Button"/>
-            </StackPanel>
-        </StackPanel>
+                <Button Content="Add" Grid.Row="0" Grid.Column="0" Width="140" Margin="5" Padding="10,5" Click="AddButton_Click"/>
+                <Button Content="Cancel" Grid.Row="0" Grid.Column="2" Width="140" Margin="5" Padding="10,5" Click="CancelButton_Click"/>
+                <Button Content="Toggle Theme" Grid.Row="2" Grid.Column="0" Width="140" Margin="5" Padding="10,5" Click="ToggleThemeButton_Click" />
+                <Button Content="Manage Categories" Grid.Row="2" Grid.Column="2" Width="140" Margin="5" Padding="10,5" Click="Categories_Button"/>
+            </Grid>
 
-        <Button Grid.Row="3" Content="X" Click="ExitButton_Click" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10"/>
-        <TextBlock x:Name="DisplayDatabase" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="-10,10,10,-5">hi</TextBlock>
+            <Button Content="X" Click="ExitButton_Click" HorizontalAlignment="Right" VerticalAlignment="Top"/>
+            <TextBlock x:Name="DisplayDatabase" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="Database: "/>
+        </Grid>
     </Grid>
 </Window>
