--- a/Calendar/EventReport.xaml
+++ b/Calendar/EventReport.xaml
@@ -30,7 +30,14 @@
             <Button Margin="0, 20, 10, 10" Click="Add_Events">Add Event</Button>
             <TextBlock x:Name="DisplayDatabase" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="Database: "/>
         </StackPanel>
-        
-        <DataGrid Name="myDataGrid" Grid.Column="1"></DataGrid>
+
+        <DataGrid Name="myDataGrid" Grid.Column="1" IsReadOnly="True" ContextMenuOpening="myDataGrid_ContextMenuOpening">
+            <DataGrid.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Delete" Click="Delete_Event" />
+                    <MenuItem Header="Update" Click="Update_Event"/>
+                </ContextMenu>
+            </DataGrid.ContextMenu>
+        </DataGrid>
     </Grid>
 </Window>
