--- a/Calendar/EventReport.xaml
+++ b/Calendar/EventReport.xaml
@@ -15,13 +15,13 @@
         <TextBlock Margin="10" FontSize="20">DISPLAY OPTIONS</TextBlock>
         <StackPanel Margin="10,40,10,10" Grid.Column="0">
             <Label Content="Start Date"/>
-            <DatePicker x:Name="StartDatePicker" Margin="0,2"/>
+            <DatePicker x:Name="StartDatePicker" Margin="0,2" SelectedDate="{Binding StartDate, Mode=TwoWay}"/>
 
             <Label Content="End Date"/>
-            <DatePicker x:Name="EndDatePicker" Margin="0,2"/>
+            <DatePicker x:Name="EndDatePicker" Margin="0,2" SelectedDate="{Binding EndDate, Mode=TwoWay}"/>
 
-            <CheckBox Margin="0,10,10,10">Filter by Category</CheckBox>
-            <ComboBox x:Name="CategoryComboBox"/>
+            <CheckBox x:Name="CategoryFilterCheckBox" Margin="0,10,10,10" IsChecked="{Binding FilterByCategory, Mode=TwoWay}">Filter by Category</CheckBox>
+            <ComboBox x:Name="CategoryComboBox" ItemsSource="{Binding Categories}" SelectedItem="{Binding SelectedCategory, Mode=TwoWay}"/>
 
             <Label>Summary</Label>
             <CheckBox>By Month</CheckBox>
@@ -31,7 +31,7 @@
             <TextBlock x:Name="DisplayDatabase" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="Database: "/>
         </StackPanel>
 
-        <DataGrid Name="myDataGrid" Grid.Column="1" IsReadOnly="True" ContextMenuOpening="myDataGrid_ContextMenuOpening">
+        <DataGrid Name="myDataGrid" Grid.Column="1" IsReadOnly="True" ContextMenuOpening="myDataGrid_ContextMenuOpening" ItemsSource="{Binding Events}">
             <DataGrid.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Delete" Click="Delete_Event" />
