--- a/Calendar/EventReport.xaml
+++ b/Calendar/EventReport.xaml
@@ -65,6 +65,7 @@
 
         <DataGrid Name="dictionaryDataGrid" Grid.Column="1" IsReadOnly="True"
           ItemsSource="{Binding Path=EventsByCategoryAndMonth, Mode=OneWay}"
+        Visibility="{Binding SummaryByCategoryAndMonth, Converter={StaticResource BoolToVisibilityConverter}}"
           ContextMenuOpening="myDataGrid_ContextMenuOpening">
         </DataGrid>
 
