fixed the bug of the dictionary

--- a/Calendar/EventReport.xaml
+++ b/Calendar/EventReport.xaml
@@ -64,7 +64,7 @@
 
 
         <DataGrid Name="dictionaryDataGrid" Grid.Column="1" IsReadOnly="True" MouseDoubleClick="Update"
-          ItemsSource="{Binding Path=EventsByCategoryAndMonth, Mode=OneWay}"
+          ItemsSource="{Binding Path=EventsByCategoryAndMonth}"
         Visibility="{Binding SummaryByCategoryAndMonth, Converter={StaticResource BoolToVisibilityConverter}}"
           ContextMenuOpening="myDataGrid_ContextMenuOpening">
         </DataGrid>
