--- a/Calendar/EventReport.xaml
+++ b/Calendar/EventReport.xaml
@@ -35,6 +35,13 @@
             
 
             <Button Margin="0, 20, 10, 10" Click="Add_Events">Add Event</Button>
+
+            <StackPanel Margin="0, 0, 0, 20">
+                <TextBlock Text="Search:" Margin="0,10,0,0"/>
+                <TextBox x:Name="SearchTextBox" Height="23" Margin="0,0,0,5"/>
+                <Button Content="Search" Click="Search_Click"/>
+            </StackPanel>
+            
             <TextBlock x:Name="DisplayDatabase" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="Database: "/>
         </StackPanel>
 
